# ChangeLog for dev-lang/ruby
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.340 2008/07/15 18:07:15 graaff Exp $

  15 Jul 2008; Hans de Graaff <graaff@gentoo.org> ruby-1.8.6_p230.ebuild:
  Drop cjk support since the most recent oniguruma patches no longer apply to
  this version, #230111.

  29 Jun 2008; Hans de Graaff <graaff@gentoo.org>
  +files/ruby-1.8.6-revert-r15856.patch, +ruby-1.8.6_p230.ebuild:
  Try to fix the security issues reported in #225465 for ruby 1.8.6.
  Unfortunately the official p230 has a change which causes segmentation faults
  for applications like Rails and RSpec, so we are reverting that specific
  change.

*ruby-1.8.7_p22 (29 Jun 2008)

  29 Jun 2008; Caleb Tennis <caleb@gentoo.org> -ruby-1.8.7.ebuild,
  +ruby-1.8.7_p22.ebuild:
  bump 1.8.7 for security fix

  20 Jun 2008; Caleb Tennis <caleb@gentoo.org> -ruby-1.8.6_p230.ebuild:
  nevermind, don't bump this yet

*ruby-1.8.6_p230 (20 Jun 2008)

  20 Jun 2008; Caleb Tennis <caleb@gentoo.org> +ruby-1.8.6_p230.ebuild:
  version bump

*ruby-1.8.7 (10 Jun 2008)

  10 Jun 2008; Caleb Tennis <caleb@gentoo.org> -ruby-1.8.7_pre2.ebuild,
  +ruby-1.8.7.ebuild:
  bump 1.8.7 to final

*ruby-1.8.7_pre2 (21 Apr 2008)

  21 Apr 2008; Richard Brown <rbrown@gentoo.org> -ruby-1.8.7_pre1.ebuild,
  +ruby-1.8.7_pre2.ebuild:
  Version Bump

*ruby-1.8.7_pre1 (16 Apr 2008)

  16 Apr 2008; Richard Brown <rbrown@gentoo.org> +ruby-1.8.7_pre1.ebuild:
  Version bump. Drop cjk until a new version of oniguruma appears.

  06 Mar 2008; Steve Dibb <beandog@gentoo.org> ruby-1.8.6_p114.ebuild:
  amd64 stable, bug 212264

  06 Mar 2008; Jeroen Roovers <jer@gentoo.org> ruby-1.8.6_p114.ebuild:
  Stable for HPPA (bug #212264).

  05 Mar 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  ruby-1.8.6_p114.ebuild:
  ppc stable, bug #212264

  05 Mar 2008; Raúl Porcel <armin76@gentoo.org> ruby-1.8.6_p114.ebuild:
  alpha/ia64 stable wrt #212264
