@@ -1,0 +1,11 @@
+AUX ruby-1.8.6-memory-leak.diff 1351 RMD160 cba1335fcd52df26b4b2884dea14e0c74852b67a SHA1 184c1743592684abfc1cce8ffa38ae749fe0a1b1 SHA256 90dbc7b444ed936ed8a1fadb443240ec494a6c748d38ff089af423e50bdd9528
+AUX ruby-1.8.6-revert-r15856.patch 3389 RMD160 06cb82094586a1d893b1da5245063bd6f4beb9e1 SHA1 74fa9b4c2485c953ad791516806a75ba70ce5368 SHA256 16394b4e748996ef92419909f49fc59aa5938f76691eb5d7188b056d2b725efc
+DIST onigd2_5_9.tar.gz 221355 RMD160 ceeee9a0221d431d6576a566621ba9badab6423d SHA1 41ca5b916ae1d3b1675fcc45181a0ed04e8726b7 SHA256 b24df7c0fa6fc72ce37fd1e203f378359f29f739a3f4c5b6bdd40ca5f7d25db0
+DIST ruby-1.8.6-p230.tar.bz2 3948498 RMD160 cdf3ea33c3fd2258c685aea634aca7e9624036ec SHA1 c630222fd6b4272db84f54e68879f81e2014cd51 SHA256 603708301fc3fd7ef1c47bb4a24d7799c26e28db08d69cda240adcbdbff514d7
+DIST ruby-1.8.7-p22.tar.bz2 4121532 RMD160 249253406204151d9448ec43ddc61712556ae023 SHA1 a54e59393f0ca8fcc39f9e23e63a04b1cd4e3b7a SHA256 477968408e27d067ef56f552d7fc2a9e6f5cae2d1a72f17cd838ebf5e0d30149
+DIST ruby-1.9.0-2.tar.bz2 5282728 RMD160 abf70f5380f91f25130edde884deac6035afae60 SHA1 e7253d4b091925c661fe7f57389ab59d8a3e99ff SHA256 913d2bfd03e4285f61e3d343925ab8286ebfc5f7f4a7c861de7a160219cd1351
+EBUILD ruby-1.8.6_p230.ebuild 4964 RMD160 24af86ec063941594663d88051510f5698433cee SHA1 e5b6c667c417748085f14270c7c40618e68fe2e0 SHA256 1158b8d528d072ab55cb61159722aa411f2f1961508d6d7ca6c08ed0f7c03bfc
+EBUILD ruby-1.8.7_p22.ebuild 4932 RMD160 b828a9697b7117e008132b5531734647a0060ca9 SHA1 087d5c4a54eb768c19cb8846257ebb744b1c2038 SHA256 3f314a39f924730c5c05424d38ae6ed76034d2d1b77fa43140bf00c890e6859c
+EBUILD ruby-1.9.0.2.ebuild 4605 RMD160 de4201fab2da67c530f418c1e267aeb27524eecf SHA1 66b433e5cc1293157e31d1e2613c1917cfadb906 SHA256 07ad3bb93eef130777d722b683fdb1c4e190df8f09c29f7b419e13238bd21aa2
+MISC ChangeLog 50106 RMD160 d1794126e560dc87bd45430dc5dd335004658c2a SHA1 6d1947b4efc4110afc7c37db346ea34b384022f0 SHA256 88e6b10104b564a650f809f14fbf0f5492120e1d8c7718cf17f00d317c4b1df1
+MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
