@@ -24,3 +24,7 @@
 # Richard Brown <rbrown@gentoo.org> (16 Apr 2008)
 # Masked for test
 =dev-lang/ruby-1.8.7*
+
+# Sven Schwyn <gentoo@bitcetera.com> (23 Jul 2008)
+# Masked for test
+=dev-lang/ruby-1.9*
